// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createTextEdits should create text edits for deletions 1`] = `
Array [
  Object {
    "newText": "",
    "range": Object {
      "end": Object {
        "character": 4,
        "line": 3,
      },
      "start": Object {
        "character": 4,
        "line": 2,
      },
    },
  },
]
`;

exports[`createTextEdits should create text edits for insertions 1`] = `
Array [
  Object {
    "newText": "	font-size: 12px;
			",
    "range": Object {
      "end": Object {
        "character": 3,
        "line": 3,
      },
      "start": Object {
        "character": 3,
        "line": 3,
      },
    },
  },
]
`;

exports[`createTextEdits should create text edits for insertions and deletions 1`] = `
Array [
  Object {
    "newText": "",
    "range": Object {
      "end": Object {
        "character": 17,
        "line": 2,
      },
      "start": Object {
        "character": 16,
        "line": 2,
      },
    },
  },
  Object {
    "newText": "4",
    "range": Object {
      "end": Object {
        "character": 17,
        "line": 2,
      },
      "start": Object {
        "character": 17,
        "line": 2,
      },
    },
  },
  Object {
    "newText": "",
    "range": Object {
      "end": Object {
        "character": 21,
        "line": 3,
      },
      "start": Object {
        "character": 19,
        "line": 2,
      },
    },
  },
  Object {
    "newText": "",
    "range": Object {
      "end": Object {
        "character": 20,
        "line": 8,
      },
      "start": Object {
        "character": 17,
        "line": 8,
      },
    },
  },
  Object {
    "newText": "e2e2e2",
    "range": Object {
      "end": Object {
        "character": 20,
        "line": 8,
      },
      "start": Object {
        "character": 20,
        "line": 8,
      },
    },
  },
  Object {
    "newText": "'",
    "range": Object {
      "end": Object {
        "character": 25,
        "line": 8,
      },
      "start": Object {
        "character": 25,
        "line": 8,
      },
    },
  },
  Object {
    "newText": "",
    "range": Object {
      "end": Object {
        "character": 29,
        "line": 8,
      },
      "start": Object {
        "character": 26,
        "line": 8,
      },
    },
  },
  Object {
    "newText": "bar",
    "range": Object {
      "end": Object {
        "character": 29,
        "line": 8,
      },
      "start": Object {
        "character": 29,
        "line": 8,
      },
    },
  },
  Object {
    "newText": "'",
    "range": Object {
      "end": Object {
        "character": 33,
        "line": 8,
      },
      "start": Object {
        "character": 33,
        "line": 8,
      },
    },
  },
]
`;
